# Flumbot

./: .gitignore  =2.0  Flumbot.py  FlumbotGOTEdition.py  FlumbotGOTEditionRemastered - Copy.py  FlumbotGOTEditionRemastered.py  FlumbotV3.py  FlumbotV4.py  FlumbotV5.py  README.md  backup.py  basics.py  check_count.py  check_raw_text.py  daystart.py  game.py  games.py  generativeai.py  longtermdata.json  longtermdata.txt  messager.py  miditoaudio.py  pyproject.toml  requirements.txt  restart.py  start.bat  userdata.json  voicememe.py  voiceplay.py
data/: emoji.json  longtermdata.json  prompt.json  quips.json  userdata.json
